--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,9 @@ node_modules
 
 # Optional REPL history
 .node_repl_history
+{
+  "uuid": "cbb0ae28-965a-49bd-b6b0-a30a2eda5094",
+  "token": "d1d83f51d97ebcf4825ebb7bbf8ef8d77fdcca51",
+  "server": "meshblu.octoblu.com",
+  "port": 443
+}
