made this repo really, really slow for everyone else. chris images

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "classnames": "^2.2.0",
     "clipboard": "^1.5.5",
+    "file-loader": "^0.8.5",
     "history": "~1.13.1",
     "isomorphic-fetch": "^2.2.0",
     "lodash": "^3.10.1",
@@ -26,7 +27,8 @@
     "redux-router": "^1.0.0-beta5",
     "redux-thunk": "^1.0.0",
     "superagent": "^1.5.0",
-    "url": "^0.11.0"
+    "url": "^0.11.0",
+    "url-loader": "^0.5.7"
   },
   "devDependencies": {
     "autoprefixer": "^6.1.0",
