--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "intel-drink-bot",
-  "version": "1.0.13",
+  "version": "1.0.14",
   "description": "[![Build Status](https://travis-ci.org/octoblu/.svg?branch=master)](https://travis-ci.org/octoblu/) [![Code Climate](https://codeclimate.com/github/octoblu//badges/gpa.svg)](https://codeclimate.com/github/octoblu/) [![Test Coverage](https://codeclimate.com/github/octoblu//badges/coverage.svg)](https://codeclimate.com/github/octoblu/) [![npm version](https://badge.fury.io/js/.svg)](http://badge.fury.io/js/) [![Gitter](https://badges.gitter.im/octoblu/help.svg)](https://gitter.im/octoblu/help)",
   "main": "webpack.config.dev.js",
   "directories": {
@@ -15,6 +15,7 @@
     "isomorphic-fetch": "^2.2.0",
     "lodash": "^4.0.0",
     "node-uuid": "^1.4.7",
+    "querystring": "^0.2.0",
     "react": "^0.14.2",
     "react-click-outside": "^2.1.0",
     "react-cookie": "^0.4.2",
