--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "intel-drink-bot",
-  "version": "1.0.17",
+  "version": "1.0.18",
   "description": "[![Build Status](https://travis-ci.org/octoblu/.svg?branch=master)](https://travis-ci.org/octoblu/) [![Code Climate](https://codeclimate.com/github/octoblu//badges/gpa.svg)](https://codeclimate.com/github/octoblu/) [![Test Coverage](https://codeclimate.com/github/octoblu//badges/coverage.svg)](https://codeclimate.com/github/octoblu/) [![npm version](https://badge.fury.io/js/.svg)](http://badge.fury.io/js/) [![Gitter](https://badges.gitter.im/octoblu/help.svg)](https://gitter.im/octoblu/help)",
   "main": "webpack.config.dev.js",
   "directories": {
@@ -12,6 +12,7 @@
     "clipboard": "^1.5.5",
     "file-loader": "^0.8.5",
     "history": "~1.13.1",
+    "imports-loader": "^0.6.5",
     "isomorphic-fetch": "^2.2.0",
     "lodash": "^4.0.0",
     "node-uuid": "^1.4.7",
